# alloy-playground

./: .gitignore  Justfile  README.md  package.json
backend/: Cargo.toml  env.example
backend/contracts/: foundry.toml
backend/contracts/src/: DemoToken.sol
backend/src/: contracts.rs  error.rs  lib.rs  main.rs  openapi.rs  serde_helpers.rs  state.rs
backend/src/routes/: account.rs  erc20.rs  events_ws.rs  health.rs  mod.rs  network.rs  tx.rs  wallet.rs
backend/tests/: erc20_flow.rs
web/: index.html  package.json  tsconfig.json  vite.config.ts
web/scripts/: codegen.ts
web/src/: main.tsx  routeTree.ts  styles.css
web/src/components/: AddressInput.tsx  NetworkWalletToggles.tsx  WalletBadge.tsx
web/src/lib/: api.ts  eth.ts  format.ts  metamask.ts  store.ts
web/src/routes/: __root.tsx  erc20.tsx  events.tsx  index.tsx  transfer.tsx  wallet.tsx
web/src/types/: api.d.ts
